# QuarkLA

./: .gitignore  CMakeLists.txt  README.md
include/QuarkLA/: Mat.hpp  Vec.hpp
src/: main.cpp
tests/: test_mat.cpp  test_vec.cpp
